# Synapse

./: Cargo.toml  README.md
src/: main.rs
src/activation/: mod.rs
src/neuron/: functions.rs  mod.rs
src/synapse/: mod.rs
