[package]
name = "SynapseRust"
version = "0.1.0"
authors = ["niruhsa <48173574+niruhsa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rayon" = "*"
"mindtree_utils" = "*"
"rand" = "0.8.3"
"timeit" = "*"